--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.5.0",
     "express": "^4.16.3",
-    "styled-components": "^3.3.3",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "styled-components": "^3.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -27,21 +28,26 @@
     "@testing-library/jest-dom": "^5.11.2",
     "@testing-library/react": "^10.4.7",
     "@testing-library/react-hooks": "^3.4.1",
+    "@testing-library/user-event": "^12.1.3",
     "babel-eslint": "^10.0.0",
     "babel-loader": "^8.0.0",
     "clean-webpack-plugin": "^1.0.0",
     "concurrently": "^4.0.0",
     "css-loader": "^2.0.0",
-    "eslint": "^5.0.0",
-    "eslint-config-airbnb": "^17.0.0",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
+    "eslint": "^7.7.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.0",
     "file-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^26.2.2",
     "nodemon": "^1.17.3",
+    "prettier": "2.1.1",
     "react-test-renderer": "^16.13.1",
+    "regenerator-runtime": "^0.13.7",
     "style-loader": "^0.23.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.5.0",
